[package]
name = "sleepy"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
hyper = { version = "1.6.0", features = ["server", "client", "http1"] }
once_cell = "1.21.3"
parking_lot = "0.12.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.6.6", features = ["trace"] }
uuid = { version = "1.17.0", features = ["v4"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
