[package]
name = "sleepy"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.21.3"
parking_lot = "0.12.4"
http-body-util = "0.1"
hyper = { version = "1.6.0", features = ["server", "client", "http1"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "rt"]}
uuid = { version = "1.17.0", features = ["v4"] }
hyper-util = { version = "0.1", features = ["tokio"] }
